answer/NJU_Compiler2021-master/Lab2/Code/syntax.output
State 28 conflicts: 1 shift/reduce
State 152 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ε
    3           | ExtDef ExtDefList

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | error SEMI
    8       | Specifier error

    9 ExtDecList: VarDec
   10           | VarDec COMMA ExtDecList
   11           | VarDec error ExtDecList
   12           | VarDec error

   13 Specifier: TYPE
   14          | StructSpecifier

   15 StructSpecifier: STRUCT OptTag LC DefList RC
   16                | STRUCT Tag
   17                | STRUCT OptTag LC error RC

   18 OptTag: ε
   19       | ID

   20 Tag: ID

   21 VarDec: ID
   22       | VarDec LB INT RB
   23       | VarDec LB error RB
   24       | VarDec LB error

   25 FunDec: ID LP VarList RP
   26       | ID LP RP
   27       | ID LP error RP
   28       | error LP VarList RP

   29 VarList: ParamDec COMMA VarList
   30        | ParamDec

   31 ParamDec: Specifier VarDec

   32 CompSt: LC DefList StmtList RC
   33       | LC error RC

   34 StmtList: ε
   35         | Stmt StmtList

   36 Stmt: Exp SEMI
   37     | CompSt
   38     | RETURN Exp SEMI
   39     | IF LP Exp RP Stmt
   40     | IF LP Exp RP Stmt ELSE Stmt
   41     | WHILE LP Exp RP Stmt
   42     | error SEMI
   43     | Exp error
   44     | RETURN Exp error
   45     | RETURN error SEMI

   46 DefList: ε
   47        | Def DefList

   48 Def: Specifier DecList SEMI
   49    | Specifier error SEMI

   50 DecList: Dec
   51        | Dec COMMA DecList
   52        | Dec error DecList
   53        | Dec error

   54 Dec: VarDec
   55    | VarDec ASSIGNOP Exp
   56    | VarDec ASSIGNOP error

   57 Exp: Exp ASSIGNOP Exp
   58    | Exp AND Exp
   59    | Exp OR Exp
   60    | Exp RELOP Exp
   61    | Exp PLUS Exp
   62    | Exp MINUS Exp
   63    | Exp STAR Exp
   64    | Exp DIV Exp
   65    | LP Exp RP
   66    | MINUS Exp
   67    | NOT Exp
   68    | ID LP Args RP
   69    | ID LP RP
   70    | Exp LB Exp RB
   71    | Exp DOT ID
   72    | ID
   73    | INT
   74    | FLOAT
   75    | Exp ASSIGNOP error
   76    | Exp AND error
   77    | Exp OR error
   78    | Exp RELOP error
   79    | Exp PLUS error
   80    | Exp MINUS error
   81    | Exp STAR error
   82    | Exp DIV error
   83    | LP error RP
   84    | MINUS error
   85    | NOT error
   86    | ID LP error RP
   87    | ID LP error SEMI
   88    | Exp LB error RB
   89    | Exp LB error SEMI

   90 Args: Exp COMMA Args
   91     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 7 8 11 12 17 23 24 27 28 33 42 43 44 45 49 52 53 56 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89
    ASSIGNOP <node> (258) 55 56 57 75
    OR <node> (259) 59 77
    AND <node> (260) 58 76
    RELOP <node> (261) 60 78
    PLUS <node> (262) 61 79
    MINUS <node> (263) 62 66 80 84
    STAR <node> (264) 63 81
    DIV <node> (265) 64 82
    NOT <node> (266) 67 85
    LP <node> (267) 25 26 27 28 39 40 41 65 68 69 83 86 87
    RP <node> (268) 25 26 27 28 39 40 41 65 68 69 83 86
    LB <node> (269) 22 23 24 70 88 89
    RB <node> (270) 22 23 70 88
    DOT <node> (271) 71
    INT <node> (272) 22 73
    FLOAT <node> (273) 74
    ID <node> (274) 19 20 21 25 26 27 68 69 71 72 86 87
    STRUCT <node> (275) 15 16 17
    RETURN <node> (276) 38 44 45
    IF <node> (277) 39 40
    ELSE <node> (278) 40
    WHILE <node> (279) 41
    TYPE <node> (280) 13
    SEMI <node> (281) 4 5 7 36 38 42 45 48 49 87 89
    COMMA <node> (282) 10 29 51 90
    LC <node> (283) 15 17 32 33
    RC <node> (284) 15 17 32 33


Nonterminals, with rules where they appear

    $accept (30)
        on left: 0
    Program <node> (31)
        on left: 1
        on right: 0
    ExtDefList <node> (32)
        on left: 2 3
        on right: 1 3
    ExtDef <node> (33)
        on left: 4 5 6 7 8
        on right: 3
    ExtDecList <node> (34)
        on left: 9 10 11 12
        on right: 4 10 11
    Specifier <node> (35)
        on left: 13 14
        on right: 4 5 6 8 31 48 49
    StructSpecifier <node> (36)
        on left: 15 16 17
        on right: 14
    OptTag <node> (37)
        on left: 18 19
        on right: 15 17
    Tag <node> (38)
        on left: 20
        on right: 16
    VarDec <node> (39)
        on left: 21 22 23 24
        on right: 9 10 11 12 22 23 24 31 54 55 56
    FunDec <node> (40)
        on left: 25 26 27 28
        on right: 6
    VarList <node> (41)
        on left: 29 30
        on right: 25 28 29
    ParamDec <node> (42)
        on left: 31
        on right: 29 30
    CompSt <node> (43)
        on left: 32 33
        on right: 6 37
    StmtList <node> (44)
        on left: 34 35
        on right: 32 35
    Stmt <node> (45)
        on left: 36 37 38 39 40 41 42 43 44 45
        on right: 35 39 40 41
    DefList <node> (46)
        on left: 46 47
        on right: 15 32 47
    Def <node> (47)
        on left: 48 49
        on right: 47
    DecList <node> (48)
        on left: 50 51 52 53
        on right: 48 51 52
    Dec <node> (49)
        on left: 54 55 56
        on right: 50 51 52 53
    Exp <node> (50)
        on left: 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89
        on right: 36 38 39 40 41 43 44 55 57 58 59 60 61 62 63 64 65 66 67 70 71 75 76 77 78 79 80 81 82 88 89 90 91
    Args <node> (51)
        on left: 90 91
        on right: 68 90


State 0

    0 $accept: • Program $end

    error   shift, and go to state 1
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    $end  reduce using rule 2 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    7 ExtDef: error • SEMI

    SEMI  shift, and go to state 9


State 2

   15 StructSpecifier: STRUCT • OptTag LC DefList RC
   16                | STRUCT • Tag
   17                | STRUCT • OptTag LC error RC

    ID  shift, and go to state 10

    $default  reduce using rule 18 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


State 3

   13 Specifier: TYPE •

    $default  reduce using rule 13 (Specifier)


State 4

    0 $accept: Program • $end

    $end  shift, and go to state 13


State 5

    1 Program: ExtDefList •

    $default  reduce using rule 1 (Program)


State 6

    3 ExtDefList: ExtDef • ExtDefList

    error   shift, and go to state 1
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    $end  reduce using rule 2 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier • ExtDecList SEMI
    5       | Specifier • SEMI
    6       | Specifier • FunDec CompSt
    8       | Specifier • error

    error  shift, and go to state 15
    ID     shift, and go to state 16
    SEMI   shift, and go to state 17

    ExtDecList  go to state 18
    VarDec      go to state 19
    FunDec      go to state 20


State 8

   14 Specifier: StructSpecifier •

    $default  reduce using rule 14 (Specifier)


State 9

    7 ExtDef: error SEMI •

    $default  reduce using rule 7 (ExtDef)


State 10

   19 OptTag: ID •
   20 Tag: ID •

    LC        reduce using rule 19 (OptTag)
    $default  reduce using rule 20 (Tag)


State 11

   15 StructSpecifier: STRUCT OptTag • LC DefList RC
   17                | STRUCT OptTag • LC error RC

    LC  shift, and go to state 21


State 12

   16 StructSpecifier: STRUCT Tag •

    $default  reduce using rule 16 (StructSpecifier)


State 13

    0 $accept: Program $end •

    $default  accept


State 14

    3 ExtDefList: ExtDef ExtDefList •

    $default  reduce using rule 3 (ExtDefList)


State 15

    8 ExtDef: Specifier error •
   28 FunDec: error • LP VarList RP

    LP  shift, and go to state 22

    $default  reduce using rule 8 (ExtDef)


State 16

   21 VarDec: ID •
   25 FunDec: ID • LP VarList RP
   26       | ID • LP RP
   27       | ID • LP error RP

    LP  shift, and go to state 23

    $default  reduce using rule 21 (VarDec)


State 17

    5 ExtDef: Specifier SEMI •

    $default  reduce using rule 5 (ExtDef)


State 18

    4 ExtDef: Specifier ExtDecList • SEMI

    SEMI  shift, and go to state 24


State 19

    9 ExtDecList: VarDec •
   10           | VarDec • COMMA ExtDecList
   11           | VarDec • error ExtDecList
   12           | VarDec • error
   22 VarDec: VarDec • LB INT RB
   23       | VarDec • LB error RB
   24       | VarDec • LB error

    error  shift, and go to state 25
    LB     shift, and go to state 26
    COMMA  shift, and go to state 27

    SEMI  reduce using rule 9 (ExtDecList)


State 20

    6 ExtDef: Specifier FunDec • CompSt

    LC  shift, and go to state 28

    CompSt  go to state 29


State 21

   15 StructSpecifier: STRUCT OptTag LC • DefList RC
   17                | STRUCT OptTag LC • error RC

    error   shift, and go to state 30
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    RC  reduce using rule 46 (DefList)

    Specifier        go to state 31
    StructSpecifier  go to state 8
    DefList          go to state 32
    Def              go to state 33


State 22

   28 FunDec: error LP • VarList RP

    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    Specifier        go to state 34
    StructSpecifier  go to state 8
    VarList          go to state 35
    ParamDec         go to state 36


State 23

   25 FunDec: ID LP • VarList RP
   26       | ID LP • RP
   27       | ID LP • error RP

    error   shift, and go to state 37
    RP      shift, and go to state 38
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    Specifier        go to state 34
    StructSpecifier  go to state 8
    VarList          go to state 39
    ParamDec         go to state 36


State 24

    4 ExtDef: Specifier ExtDecList SEMI •

    $default  reduce using rule 4 (ExtDef)


State 25

   11 ExtDecList: VarDec error • ExtDecList
   12           | VarDec error •

    ID  shift, and go to state 40

    $default  reduce using rule 12 (ExtDecList)

    ExtDecList  go to state 41
    VarDec      go to state 19


State 26

   22 VarDec: VarDec LB • INT RB
   23       | VarDec LB • error RB
   24       | VarDec LB • error

    error  shift, and go to state 42
    INT    shift, and go to state 43


State 27

   10 ExtDecList: VarDec COMMA • ExtDecList

    ID  shift, and go to state 40

    ExtDecList  go to state 44
    VarDec      go to state 19


State 28

   32 CompSt: LC • DefList StmtList RC
   33       | LC • error RC

    error   shift, and go to state 45
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    error   [reduce using rule 46 (DefList)]
    MINUS   reduce using rule 46 (DefList)
    NOT     reduce using rule 46 (DefList)
    LP      reduce using rule 46 (DefList)
    INT     reduce using rule 46 (DefList)
    FLOAT   reduce using rule 46 (DefList)
    ID      reduce using rule 46 (DefList)
    RETURN  reduce using rule 46 (DefList)
    IF      reduce using rule 46 (DefList)
    WHILE   reduce using rule 46 (DefList)
    LC      reduce using rule 46 (DefList)
    RC      reduce using rule 46 (DefList)

    Specifier        go to state 31
    StructSpecifier  go to state 8
    DefList          go to state 46
    Def              go to state 33


State 29

    6 ExtDef: Specifier FunDec CompSt •

    $default  reduce using rule 6 (ExtDef)


State 30

   17 StructSpecifier: STRUCT OptTag LC error • RC

    RC  shift, and go to state 47


State 31

   48 Def: Specifier • DecList SEMI
   49    | Specifier • error SEMI

    error  shift, and go to state 48
    ID     shift, and go to state 40

    VarDec   go to state 49
    DecList  go to state 50
    Dec      go to state 51


State 32

   15 StructSpecifier: STRUCT OptTag LC DefList • RC

    RC  shift, and go to state 52


State 33

   47 DefList: Def • DefList

    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    $default  reduce using rule 46 (DefList)

    Specifier        go to state 31
    StructSpecifier  go to state 8
    DefList          go to state 53
    Def              go to state 33


State 34

   31 ParamDec: Specifier • VarDec

    ID  shift, and go to state 40

    VarDec  go to state 54


State 35

   28 FunDec: error LP VarList • RP

    RP  shift, and go to state 55


State 36

   29 VarList: ParamDec • COMMA VarList
   30        | ParamDec •

    COMMA  shift, and go to state 56

    $default  reduce using rule 30 (VarList)


State 37

   27 FunDec: ID LP error • RP

    RP  shift, and go to state 57


State 38

   26 FunDec: ID LP RP •

    $default  reduce using rule 26 (FunDec)


State 39

   25 FunDec: ID LP VarList • RP

    RP  shift, and go to state 58


State 40

   21 VarDec: ID •

    $default  reduce using rule 21 (VarDec)


State 41

   11 ExtDecList: VarDec error ExtDecList •

    $default  reduce using rule 11 (ExtDecList)


State 42

   23 VarDec: VarDec LB error • RB
   24       | VarDec LB error •

    RB  shift, and go to state 59

    $default  reduce using rule 24 (VarDec)


State 43

   22 VarDec: VarDec LB INT • RB

    RB  shift, and go to state 60


State 44

   10 ExtDecList: VarDec COMMA ExtDecList •

    $default  reduce using rule 10 (ExtDecList)


State 45

   33 CompSt: LC error • RC

    RC  shift, and go to state 61


State 46

   32 CompSt: LC DefList • StmtList RC

    error   shift, and go to state 62
    MINUS   shift, and go to state 63
    NOT     shift, and go to state 64
    LP      shift, and go to state 65
    INT     shift, and go to state 66
    FLOAT   shift, and go to state 67
    ID      shift, and go to state 68
    RETURN  shift, and go to state 69
    IF      shift, and go to state 70
    WHILE   shift, and go to state 71
    LC      shift, and go to state 28

    RC  reduce using rule 34 (StmtList)

    CompSt    go to state 72
    StmtList  go to state 73
    Stmt      go to state 74
    Exp       go to state 75


State 47

   17 StructSpecifier: STRUCT OptTag LC error RC •

    $default  reduce using rule 17 (StructSpecifier)


State 48

   49 Def: Specifier error • SEMI

    SEMI  shift, and go to state 76


State 49

   22 VarDec: VarDec • LB INT RB
   23       | VarDec • LB error RB
   24       | VarDec • LB error
   54 Dec: VarDec •
   55    | VarDec • ASSIGNOP Exp
   56    | VarDec • ASSIGNOP error

    ASSIGNOP  shift, and go to state 77
    LB        shift, and go to state 26

    $default  reduce using rule 54 (Dec)


State 50

   48 Def: Specifier DecList • SEMI

    SEMI  shift, and go to state 78


State 51

   50 DecList: Dec •
   51        | Dec • COMMA DecList
   52        | Dec • error DecList
   53        | Dec • error

    error  shift, and go to state 79
    COMMA  shift, and go to state 80

    SEMI  reduce using rule 50 (DecList)


State 52

   15 StructSpecifier: STRUCT OptTag LC DefList RC •

    $default  reduce using rule 15 (StructSpecifier)


State 53

   47 DefList: Def DefList •

    $default  reduce using rule 47 (DefList)


State 54

   22 VarDec: VarDec • LB INT RB
   23       | VarDec • LB error RB
   24       | VarDec • LB error
   31 ParamDec: Specifier VarDec •

    LB  shift, and go to state 26

    $default  reduce using rule 31 (ParamDec)


State 55

   28 FunDec: error LP VarList RP •

    $default  reduce using rule 28 (FunDec)


State 56

   29 VarList: ParamDec COMMA • VarList

    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    Specifier        go to state 34
    StructSpecifier  go to state 8
    VarList          go to state 81
    ParamDec         go to state 36


State 57

   27 FunDec: ID LP error RP •

    $default  reduce using rule 27 (FunDec)


State 58

   25 FunDec: ID LP VarList RP •

    $default  reduce using rule 25 (FunDec)


State 59

   23 VarDec: VarDec LB error RB •

    $default  reduce using rule 23 (VarDec)


State 60

   22 VarDec: VarDec LB INT RB •

    $default  reduce using rule 22 (VarDec)


State 61

   33 CompSt: LC error RC •

    $default  reduce using rule 33 (CompSt)


State 62

   42 Stmt: error • SEMI

    SEMI  shift, and go to state 82


State 63

   66 Exp: MINUS • Exp
   84    | MINUS • error

    error  shift, and go to state 83
    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65
    INT    shift, and go to state 66
    FLOAT  shift, and go to state 67
    ID     shift, and go to state 68

    Exp  go to state 84


State 64

   67 Exp: NOT • Exp
   85    | NOT • error

    error  shift, and go to state 85
    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65
    INT    shift, and go to state 66
    FLOAT  shift, and go to state 67
    ID     shift, and go to state 68

    Exp  go to state 86


State 65

   65 Exp: LP • Exp RP
   83    | LP • error RP

    error  shift, and go to state 87
    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65
    INT    shift, and go to state 66
    FLOAT  shift, and go to state 67
    ID     shift, and go to state 68

    Exp  go to state 88


State 66

   73 Exp: INT •

    $default  reduce using rule 73 (Exp)


State 67

   74 Exp: FLOAT •

    $default  reduce using rule 74 (Exp)


State 68

   68 Exp: ID • LP Args RP
   69    | ID • LP RP
   72    | ID •
   86    | ID • LP error RP
   87    | ID • LP error SEMI

    LP  shift, and go to state 89

    $default  reduce using rule 72 (Exp)


State 69

   38 Stmt: RETURN • Exp SEMI
   44     | RETURN • Exp error
   45     | RETURN • error SEMI

    error  shift, and go to state 90
    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65
    INT    shift, and go to state 66
    FLOAT  shift, and go to state 67
    ID     shift, and go to state 68

    Exp  go to state 91


State 70

   39 Stmt: IF • LP Exp RP Stmt
   40     | IF • LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 92


State 71

   41 Stmt: WHILE • LP Exp RP Stmt

    LP  shift, and go to state 93


State 72

   37 Stmt: CompSt •

    $default  reduce using rule 37 (Stmt)


State 73

   32 CompSt: LC DefList StmtList • RC

    RC  shift, and go to state 94


State 74

   35 StmtList: Stmt • StmtList

    error   shift, and go to state 62
    MINUS   shift, and go to state 63
    NOT     shift, and go to state 64
    LP      shift, and go to state 65
    INT     shift, and go to state 66
    FLOAT   shift, and go to state 67
    ID      shift, and go to state 68
    RETURN  shift, and go to state 69
    IF      shift, and go to state 70
    WHILE   shift, and go to state 71
    LC      shift, and go to state 28

    RC  reduce using rule 34 (StmtList)

    CompSt    go to state 72
    StmtList  go to state 95
    Stmt      go to state 74
    Exp       go to state 75


State 75

   36 Stmt: Exp • SEMI
   43     | Exp • error
   57 Exp: Exp • ASSIGNOP Exp
   58    | Exp • AND Exp
   59    | Exp • OR Exp
   60    | Exp • RELOP Exp
   61    | Exp • PLUS Exp
   62    | Exp • MINUS Exp
   63    | Exp • STAR Exp
   64    | Exp • DIV Exp
   70    | Exp • LB Exp RB
   71    | Exp • DOT ID
   75    | Exp • ASSIGNOP error
   76    | Exp • AND error
   77    | Exp • OR error
   78    | Exp • RELOP error
   79    | Exp • PLUS error
   80    | Exp • MINUS error
   81    | Exp • STAR error
   82    | Exp • DIV error
   88    | Exp • LB error RB
   89    | Exp • LB error SEMI

    error     shift, and go to state 96
    ASSIGNOP  shift, and go to state 97
    OR        shift, and go to state 98
    AND       shift, and go to state 99
    RELOP     shift, and go to state 100
    PLUS      shift, and go to state 101
    MINUS     shift, and go to state 102
    STAR      shift, and go to state 103
    DIV       shift, and go to state 104
    LB        shift, and go to state 105
    DOT       shift, and go to state 106
    SEMI      shift, and go to state 107


State 76

   49 Def: Specifier error SEMI •

    $default  reduce using rule 49 (Def)


State 77

   55 Dec: VarDec ASSIGNOP • Exp
   56    | VarDec ASSIGNOP • error

    error  shift, and go to state 108
    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65
    INT    shift, and go to state 66
    FLOAT  shift, and go to state 67
    ID     shift, and go to state 68

    Exp  go to state 109


State 78

   48 Def: Specifier DecList SEMI •

    $default  reduce using rule 48 (Def)


State 79

   52 DecList: Dec error • DecList
   53        | Dec error •

    ID  shift, and go to state 40

    $default  reduce using rule 53 (DecList)

    VarDec   go to state 49
    DecList  go to state 110
    Dec      go to state 51


State 80

   51 DecList: Dec COMMA • DecList

    ID  shift, and go to state 40

    VarDec   go to state 49
    DecList  go to state 111
    Dec      go to state 51


State 81

   29 VarList: ParamDec COMMA VarList •

    $default  reduce using rule 29 (VarList)


State 82

   42 Stmt: error SEMI •

    $default  reduce using rule 42 (Stmt)


State 83

   84 Exp: MINUS error •

    $default  reduce using rule 84 (Exp)


State 84

   57 Exp: Exp • ASSIGNOP Exp
   58    | Exp • AND Exp
   59    | Exp • OR Exp
   60    | Exp • RELOP Exp
   61    | Exp • PLUS Exp
   62    | Exp • MINUS Exp
   63    | Exp • STAR Exp
   64    | Exp • DIV Exp
   66    | MINUS Exp •
   70    | Exp • LB Exp RB
   71    | Exp • DOT ID
   75    | Exp • ASSIGNOP error
   76    | Exp • AND error
   77    | Exp • OR error
   78    | Exp • RELOP error
   79    | Exp • PLUS error
   80    | Exp • MINUS error
   81    | Exp • STAR error
   82    | Exp • DIV error
   88    | Exp • LB error RB
   89    | Exp • LB error SEMI

    LB   shift, and go to state 105
    DOT  shift, and go to state 106

    $default  reduce using rule 66 (Exp)


State 85

   85 Exp: NOT error •

    $default  reduce using rule 85 (Exp)


State 86

   57 Exp: Exp • ASSIGNOP Exp
   58    | Exp • AND Exp
   59    | Exp • OR Exp
   60    | Exp • RELOP Exp
   61    | Exp • PLUS Exp
   62    | Exp • MINUS Exp
   63    | Exp • STAR Exp
   64    | Exp • DIV Exp
   67    | NOT Exp •
   70    | Exp • LB Exp RB
   71    | Exp • DOT ID
   75    | Exp • ASSIGNOP error
   76    | Exp • AND error
   77    | Exp • OR error
   78    | Exp • RELOP error
   79    | Exp • PLUS error
   80    | Exp • MINUS error
   81    | Exp • STAR error
   82    | Exp • DIV error
   88    | Exp • LB error RB
   89    | Exp • LB error SEMI

    LB   shift, and go to state 105
    DOT  shift, and go to state 106

    $default  reduce using rule 67 (Exp)


State 87

   83 Exp: LP error • RP

    RP  shift, and go to state 112


State 88

   57 Exp: Exp • ASSIGNOP Exp
   58    | Exp • AND Exp
   59    | Exp • OR Exp
   60    | Exp • RELOP Exp
   61    | Exp • PLUS Exp
   62    | Exp • MINUS Exp
   63    | Exp • STAR Exp
   64    | Exp • DIV Exp
   65    | LP Exp • RP
   70    | Exp • LB Exp RB
   71    | Exp • DOT ID
   75    | Exp • ASSIGNOP error
   76    | Exp • AND error
   77    | Exp • OR error
   78    | Exp • RELOP error
   79    | Exp • PLUS error
   80    | Exp • MINUS error
   81    | Exp • STAR error
   82    | Exp • DIV error
   88    | Exp • LB error RB
   89    | Exp • LB error SEMI

    ASSIGNOP  shift, and go to state 97
    OR        shift, and go to state 98
    AND       shift, and go to state 99
    RELOP     shift, and go to state 100
    PLUS      shift, and go to state 101
    MINUS     shift, and go to state 102
    STAR      shift, and go to state 103
    DIV       shift, and go to state 104
    RP        shift, and go to state 113
    LB        shift, and go to state 105
    DOT       shift, and go to state 106


State 89

   68 Exp: ID LP • Args RP
   69    | ID LP • RP
   86    | ID LP • error RP
   87    | ID LP • error SEMI

    error  shift, and go to state 114
    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65
    RP     shift, and go to state 115
    INT    shift, and go to state 66
    FLOAT  shift, and go to state 67
    ID     shift, and go to state 68

    Exp   go to state 116
    Args  go to state 117


State 90

   45 Stmt: RETURN error • SEMI

    SEMI  shift, and go to state 118


State 91

   38 Stmt: RETURN Exp • SEMI
   44     | RETURN Exp • error
   57 Exp: Exp • ASSIGNOP Exp
   58    | Exp • AND Exp
   59    | Exp • OR Exp
   60    | Exp • RELOP Exp
   61    | Exp • PLUS Exp
   62    | Exp • MINUS Exp
   63    | Exp • STAR Exp
   64    | Exp • DIV Exp
   70    | Exp • LB Exp RB
   71    | Exp • DOT ID
   75    | Exp • ASSIGNOP error
   76    | Exp • AND error
   77    | Exp • OR error
   78    | Exp • RELOP error
   79    | Exp • PLUS error
   80    | Exp • MINUS error
   81    | Exp • STAR error
   82    | Exp • DIV error
   88    | Exp • LB error RB
   89    | Exp • LB error SEMI

    error     shift, and go to state 119
    ASSIGNOP  shift, and go to state 97
    OR        shift, and go to state 98
    AND       shift, and go to state 99
    RELOP     shift, and go to state 100
    PLUS      shift, and go to state 101
    MINUS     shift, and go to state 102
    STAR      shift, and go to state 103
    DIV       shift, and go to state 104
    LB        shift, and go to state 105
    DOT       shift, and go to state 106
    SEMI      shift, and go to state 120


State 92

   39 Stmt: IF LP • Exp RP Stmt
   40     | IF LP • Exp RP Stmt ELSE Stmt

    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65
    INT    shift, and go to state 66
    FLOAT  shift, and go to state 67
    ID     shift, and go to state 68

    Exp  go to state 121


State 93

   41 Stmt: WHILE LP • Exp RP Stmt

    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65
    INT    shift, and go to state 66
    FLOAT  shift, and go to state 67
    ID     shift, and go to state 68

    Exp  go to state 122


State 94

   32 CompSt: LC DefList StmtList RC •

    $default  reduce using rule 32 (CompSt)


State 95

   35 StmtList: Stmt StmtList •

    $default  reduce using rule 35 (StmtList)


State 96

   43 Stmt: Exp error •

    $default  reduce using rule 43 (Stmt)


State 97

   57 Exp: Exp ASSIGNOP • Exp
   75    | Exp ASSIGNOP • error

    error  shift, and go to state 123
    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65
    INT    shift, and go to state 66
    FLOAT  shift, and go to state 67
    ID     shift, and go to state 68

    Exp  go to state 124


State 98

   59 Exp: Exp OR • Exp
   77    | Exp OR • error

    error  shift, and go to state 125
    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65
    INT    shift, and go to state 66
    FLOAT  shift, and go to state 67
    ID     shift, and go to state 68

    Exp  go to state 126


State 99

   58 Exp: Exp AND • Exp
   76    | Exp AND • error

    error  shift, and go to state 127
    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65
    INT    shift, and go to state 66
    FLOAT  shift, and go to state 67
    ID     shift, and go to state 68

    Exp  go to state 128


State 100

   60 Exp: Exp RELOP • Exp
   78    | Exp RELOP • error

    error  shift, and go to state 129
    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65
    INT    shift, and go to state 66
    FLOAT  shift, and go to state 67
    ID     shift, and go to state 68

    Exp  go to state 130


State 101

   61 Exp: Exp PLUS • Exp
   79    | Exp PLUS • error

    error  shift, and go to state 131
    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65
    INT    shift, and go to state 66
    FLOAT  shift, and go to state 67
    ID     shift, and go to state 68

    Exp  go to state 132


State 102

   62 Exp: Exp MINUS • Exp
   80    | Exp MINUS • error

    error  shift, and go to state 133
    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65
    INT    shift, and go to state 66
    FLOAT  shift, and go to state 67
    ID     shift, and go to state 68

    Exp  go to state 134


State 103

   63 Exp: Exp STAR • Exp
   81    | Exp STAR • error

    error  shift, and go to state 135
    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65
    INT    shift, and go to state 66
    FLOAT  shift, and go to state 67
    ID     shift, and go to state 68

    Exp  go to state 136


State 104

   64 Exp: Exp DIV • Exp
   82    | Exp DIV • error

    error  shift, and go to state 137
    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65
    INT    shift, and go to state 66
    FLOAT  shift, and go to state 67
    ID     shift, and go to state 68

    Exp  go to state 138


State 105

   70 Exp: Exp LB • Exp RB
   88    | Exp LB • error RB
   89    | Exp LB • error SEMI

    error  shift, and go to state 139
    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65
    INT    shift, and go to state 66
    FLOAT  shift, and go to state 67
    ID     shift, and go to state 68

    Exp  go to state 140


State 106

   71 Exp: Exp DOT • ID

    ID  shift, and go to state 141


State 107

   36 Stmt: Exp SEMI •

    $default  reduce using rule 36 (Stmt)


State 108

   56 Dec: VarDec ASSIGNOP error •

    $default  reduce using rule 56 (Dec)


State 109

   55 Dec: VarDec ASSIGNOP Exp •
   57 Exp: Exp • ASSIGNOP Exp
   58    | Exp • AND Exp
   59    | Exp • OR Exp
   60    | Exp • RELOP Exp
   61    | Exp • PLUS Exp
   62    | Exp • MINUS Exp
   63    | Exp • STAR Exp
   64    | Exp • DIV Exp
   70    | Exp • LB Exp RB
   71    | Exp • DOT ID
   75    | Exp • ASSIGNOP error
   76    | Exp • AND error
   77    | Exp • OR error
   78    | Exp • RELOP error
   79    | Exp • PLUS error
   80    | Exp • MINUS error
   81    | Exp • STAR error
   82    | Exp • DIV error
   88    | Exp • LB error RB
   89    | Exp • LB error SEMI

    ASSIGNOP  shift, and go to state 97
    OR        shift, and go to state 98
    AND       shift, and go to state 99
    RELOP     shift, and go to state 100
    PLUS      shift, and go to state 101
    MINUS     shift, and go to state 102
    STAR      shift, and go to state 103
    DIV       shift, and go to state 104
    LB        shift, and go to state 105
    DOT       shift, and go to state 106

    $default  reduce using rule 55 (Dec)


State 110

   52 DecList: Dec error DecList •

    $default  reduce using rule 52 (DecList)


State 111

   51 DecList: Dec COMMA DecList •

    $default  reduce using rule 51 (DecList)


State 112

   83 Exp: LP error RP •

    $default  reduce using rule 83 (Exp)


State 113

   65 Exp: LP Exp RP •

    $default  reduce using rule 65 (Exp)


State 114
